fixup! WorkerPool: complete rewrite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,11 +76,11 @@ set(GLIBMM_REQUIRED ^2.37)
 include(GenericFind)
 
 if(${HAS_STD_REGEX_REPLACE})
-  set(BOOST_REQUIRED_COMPONENTS "filesystem system")
-  generic_find(LIBNAME Boost REQUIRED COMPONENTS filesystem system unit_test_framework)
+  set(BOOST_REQUIRED_COMPONENTS "filesystem system thread")
+  generic_find(LIBNAME Boost REQUIRED COMPONENTS filesystem system thread unit_test_framework)
 else()
-  set(BOOST_REQUIRED_COMPONENTS "filesystem system regex")
-  generic_find(LIBNAME Boost REQUIRED COMPONENTS filesystem system regex unit_test_framework)
+  set(BOOST_REQUIRED_COMPONENTS "filesystem regex system thread")
+  generic_find(LIBNAME Boost REQUIRED COMPONENTS filesystem regex system thread unit_test_framework)
 endif()
 
 generic_find(LIBNAME gstreamer-1.5 VERSION ${GST_REQUIRED} REQUIRED)
